# OpenGLProject

./: CMakeLists.txt  README.md
code/: main.cpp
code/engine/handlers/: InputHandler.h
code/engine/test_framework/: Test.h
code/tests/: QuadTest.cpp  QuadTest.h
dependencies/glad/include/glad/: glad.h
dependencies/glfw/include/GLFW/: glfw3.h  glfw3native.h
dependencies/glfw/src/: cocoa_init.m  cocoa_platform.h  init.c  input.c  internal.h  monitor.c  nsgl_context.h  wgl_context.c  win32_init.c  win32_window.c  window.c  wl_init.c  x11_init.c  x11_platform.h  x11_window.c  xkb_unicode.c
res/models/6_face_test/: cube.mtl
res/models/8_vertex_test/: cube.mtl
res/shaders/1_color/: frag.shader
res/shaders/2/: frag.shader
res/shaders/2_texture/: frag.shader  vert.shader
res/shaders/3_transformations/: vert.shader
res/shaders/4_camera/: frag.shader  vert.shader
res/shaders/5_textureCube/: frag.shader
res/shaders/6_lighting/: cube_frag.shader  cube_vert.shader  light_source_vert.shader
res/shaders/7_materialLighting/: cube_frag.shader
res/shaders/8_modelLoading/: cube_frag.shader  cube_vert.shader  frag.shader  vert.shader
src/: glad.c  main.cpp
src/engine/camera/: Camera.cpp  Camera.h
src/engine/handlers/: InputHandler.h  ResizeHandler.h
src/engine/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model2.cpp  Model2.h  ModelData.h  OBJLoader.cpp  OBJLoader.h  Vertex.h
src/engine/shader/: Environment.h  Light.h  LightTypes.h  Material.h  Shader.cpp  Shader.h
src/engine/test_framework/: Test.cpp  Test.h
src/engine/texture/: Texture.cpp  Texture.h
src/engine/util/: Logger.cpp  Logger.h
src/tests/: CameraTest.cpp  CameraTest.h  CubeTest.cpp  CubeTest.h  LightingTest.cpp  LightingTest.h  MainTest.cpp  MainTest.h  MaterialTest.cpp  MaterialTest.h  ModelTest.cpp  ModelTest.h  QuadTest.cpp  QuadTest.h  ShaderTest.cpp  ShaderTest.h  TexturedCubeTest.cpp  TexturedCubeTest.h
